--- a/headnews-service/headnews-user/src/main/resources/bootstrap.yml
+++ b/headnews-service/headnews-user/src/main/resources/bootstrap.yml
@@ -1,12 +1,18 @@
 server:
   port: 51801
+
+logging:
+  level:
+    org.springframework.boot.autoconfigure.logging: ERROR
+
 spring:
   application:
-    name: leadnews-user
+    name: headnews-user
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.200.130:8848
+        server-addr: 127.0.0.1:8848
       config:
-        server-addr: 192.168.200.130:8848
+        server-addr: 127.0.0.1:8848
         file-extension: yml
+
